# image_sequence_view

./: README.md  pyproject.toml
src/image_sequence_view/: __init__.py  _timeline_view.py  _viewer.py  constants.py
src/image_sequence_view/icons/: qmacro  qresource.py
